--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Bruce Guenkam",
   "license": "MIT",
   "bin": {
-    "hello": "./bin/index.js"
+    "dadash": "./bin/index.js"
   },
   "dependencies": {
     "boxen": "4.0",
+    "camelcase": "^5.3.1",
     "chalk": "2.4",
     "routes": "^2.1.0",
+    "ucfirst": "^1.0.0",
     "validate.js": "^0.13.1",
     "yargs": "13.2"
   }
